test/files/neg/macro-noexpand.check
Test_2.scala:3: error: not found: value x
  foo(x)
      ^
one error found
